--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@loadable/component": "^5.10.3",
     "attr-accept": "^2.0.0",
+    "aws-amplify": "^2.2.6",
+    "aws-amplify-react": "^3.1.7",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.2",
     "classnames": "^2.2.6",
@@ -56,7 +58,7 @@
     "react-typed": "^1.2.0",
     "reactstrap": "^8.1.1",
     "slick-carousel": "^1.8.1",
-    "uuid": "^3.3.3"
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
